--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,10 +1,9 @@
-// home.scss
 @use "./variable" as *;
 
 .flex-container {
   display: flex;
-  justify-content: space-evenly;
-  align-items: stretch;
+  justify-content: center; 
+  align-items: center;
   margin-top: 50px;
   width: 100%;
 }
@@ -16,21 +15,155 @@
   margin: 1rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   text-align: center;
   box-shadow: 0 2px 4px $greenlogo;
   box-sizing: border-box;
-  height: auto;
+  width: 450px; 
+  height: 300px; 
 }
 
 .container1 h2,
 .container2 h2 {
   color: $greenlogo;
   font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
 }
 
 .container1 p,
 .container2 p {
   color: white;
+  font-size: 25px;
+}
+
+.intro,
+.localisation {
+  color: white;
+  text-align: center;
+  font-size: 28px;
+  margin: 20px auto;
+  padding: 10px;
+  max-width: 1200px;
+}
+
+.valeurtitre {
+  color: $greenlogo;
+  font-size: 40px;
+  text-align: center;
+  margin: 20px;
+  padding: 10px;
+  text-decoration: underline white;
+  text-underline-offset: 10px;
+  padding: 1.5rem;
+}
+
+.valeurcontainer {
+  margin: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1rem;
+  text-align: center;
+  box-sizing: border-box;
+  height: auto;
+}
+
+.valeur1,
+.valeur2 {
+  padding: 2rem;
+  border-radius: 50px;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0 2px 4px $greenlogo;
+  box-sizing: border-box;
+  height: 600px; 
+  max-width: 500px;
+}
+
+.valeur1 h3,
+.valeur2 h3 {
+  color: $greenlogo;
   font-size: 35px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.valeur1 p,
+.valeur2 p {
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  margin: 10px;
+  line-height: 1.5;
+}
+
+.missions h2,
+.clients h2 {
+  color: $greenlogo;
+  font-size: 40px;
+  text-align: center;
+  margin: 20px;
+  padding: 10px;
+  text-decoration: underline white;
+  text-underline-offset: 10px;
+}
+
+.missions p,
+.clients p {
+  color: white;
+  font-size: 28px;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+}
+
+.missionscontainer,
+.clientscontainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.missionscontainer section,
+.clientscontainer section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 50px;
+  margin: 1rem;
+  box-shadow: 0 2px 4px $greenlogo;
+  box-sizing: border-box;
+  height: 650px; 
+  width: 350px;
+  text-align: center;
+}
+
+.missionscontainer h3,
+.clientscontainer h3 {
+  margin-bottom: 10px;
+  text-align: center;
+  color: $greenlogo;
+  font-size: 35px;
+}
+
+.missionscontainer li,
+.clientscontainer li {
+  margin: 10px;
+  color: white;
+  font-size: 25px;
+padding: 0.5rem;
+  text-align: center;
+  list-style: none;
 }
