--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -11,6 +11,11 @@
   color: white;
   text-align: center;
   margin-bottom: 50px;
+
+  @media (max-width: 600px) {
+    padding: 15px;
+    margin: 10px;
+  }
 }
 
 .introcontact h2 {
@@ -18,26 +23,35 @@
   color: $greenlogo;
   margin-bottom: 20px;
   font-size: 30px;
+
+  @media (max-width: 600px) {
+    font-size: 24px; /* Réduire la taille du texte */
+  }
 }
+
 .introcontact p {
   margin-bottom: 20px;
   font-size: 25px;
   color: white;
-  text-align: center;}
-
-
-  .contact label{
   text-align: center;
- font-size: 25px;
+
+  @media (max-width: 600px) {
+    font-size: 20px; /* Réduire la taille du texte */
+  }
 }
 
+.contact label {
+  text-align: center;
+  font-size: 25px;
 
-
+  @media (max-width: 600px) {
+    font-size: 20px; /* Réduire la taille du texte */
+  }
+}
 
 .contact form {
   display: flex;
   flex-direction: column;
- 
 }
 
 .form-group {
@@ -53,6 +67,11 @@
   transition: border-color 0.3s;
   width: 100%; /* Pour que les inputs prennent toute la largeur */
   color: white;
+
+  @media (max-width: 600px) {
+    font-size: 18px; /* Réduire la taille du texte */
+    padding: 8px; /* Ajuster le padding */
+  }
 }
 
 .contact input:focus,
@@ -69,11 +88,24 @@
   color: white;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, text-shadow 0.3s, transform 0.3s; // Ajout de la transition pour la transformation
+
+  // Ajout d'un contour noir léger autour des lettres
+  text-shadow: 1px 1px 0px black, -1px -1px 0px black,
+               1px -1px 0px black, -1px 1px 0px black;
+
+  @media (max-width: 600px) {
+    font-size: 14px; /* Réduire la taille du texte */
+    padding: 8px; /* Ajuster le padding */
+  }
 }
 
 .contact button:hover {
   background-color: darken($greenlogo, 10%);
+  text-shadow: 2px 2px 0px black, -2px -2px 0px black,
+               2px -2px 0px black, -2px 2px 0px black; /* Légère intensification du contour au hover */
+  transform: scale(1.05); // Légère augmentation de la taille du bouton
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Ombre pour plus de profondeur
 }
 
 .captcha {
@@ -81,6 +113,10 @@
   flex-direction: column;
   align-items: center;
   font-size: 25px;
+
+  @media (max-width: 600px) {
+    font-size: 20px; /* Réduire la taille du texte */
+  }
 }
 
 .captcha button {
