--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -163,7 +163,66 @@
   margin: 10px;
   color: white;
   font-size: 25px;
-padding: 0.5rem;
+  padding: 0.5rem;
   text-align: center;
   list-style: none;
+}
+
+/* Media Queries pour rendre la page responsive */
+@media (max-width: 1200px) {
+  .flex-container {
+    flex-direction: column;
+  }
+  .valeurcontainer {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 900px) {
+  .container1, .container2 {
+    width: 80%; /* Ajuster la largeur */
+    height: auto; /* Ajuster la hauteur pour un meilleur équilibre */
+  }
+}
+
+@media (max-width: 600px) {
+  .missionscontainer, .clientscontainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .missionscontainer section,
+  .clientscontainer section {
+    width: 90%; /* Prendre la largeur maximale */
+    height: auto; /* Ajuster la hauteur */
+  }
+}
+
+/* Ajouts pour les très petits écrans */
+@media (max-width: 450px) {
+  .container1, .container2 {
+    width: 95%; /* Augmenter la largeur sur les très petits écrans */
+    height: auto; /* Laisser la hauteur s'ajuster */
+    padding: 1rem; /* Ajuster le rembourrage */
+  }
+
+  .valeur1, .valeur2 {
+    padding: 1.5rem; /* Réduire le rembourrage pour les valeurs */
+    height: auto; /* Laisser la hauteur s'ajuster */
+    max-width: none; /* Supprimer la limite de largeur */
+  }
+
+  .valeur1 h3, .valeur2 h3,
+  .missionscontainer h3, .clientscontainer h3 {
+    font-size: 28px; /* Réduire la taille de la police des titres */
+  }
+
+  .valeur1 p, .valeur2 p,
+  .missionscontainer li, .clientscontainer li {
+    font-size: 20px; /* Réduire la taille de la police pour le texte */
+  }
+
+  .intro, .localisation, .missions p, .clients p {
+    font-size: 20px; /* Réduire la taille de la police pour le texte introductif */
+  }
 }
