--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -88,11 +88,17 @@
   color: white;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s, text-shadow 0.3s, transform 0.3s; // Ajout de la transition pour la transformation
+  transition:
+    background-color 0.3s,
+    text-shadow 0.3s,
+    transform 0.3s; // Ajout de la transition pour la transformation
 
   // Ajout d'un contour noir léger autour des lettres
-  text-shadow: 1px 1px 0px black, -1px -1px 0px black,
-               1px -1px 0px black, -1px 1px 0px black;
+  text-shadow:
+    1px 1px 0px black,
+    -1px -1px 0px black,
+    1px -1px 0px black,
+    -1px 1px 0px black;
 
   @media (max-width: 600px) {
     font-size: 14px; /* Réduire la taille du texte */
@@ -102,8 +108,11 @@
 
 .contact button:hover {
   background-color: darken($greenlogo, 10%);
-  text-shadow: 2px 2px 0px black, -2px -2px 0px black,
-               2px -2px 0px black, -2px 2px 0px black; /* Légère intensification du contour au hover */
+  text-shadow:
+    2px 2px 0px black,
+    -2px -2px 0px black,
+    2px -2px 0px black,
+    -2px 2px 0px black; /* Légère intensification du contour au hover */
   transform: scale(1.05); // Légère augmentation de la taille du bouton
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Ombre pour plus de profondeur
 }
